fix: minor changes, including spacing, and comments

--- a/src/assets/styles/scss/buttons.scss
+++ b/src/assets/styles/scss/buttons.scss
@@ -1,16 +1,23 @@
+/*
+Buttons Styles
+PhilaUI button styles, overwrites and appends to Bulma button styles
+*/
 
-.button, .button.is-medium, .button.is-default {
+.button,
+.button.is-medium,
+.button.is-default {
   $border-width: 0.125rem;
   border-width: $border-width;
   border-color: transparent;
   padding: calc(0.75rem - #{$border-width}) calc(1rem - #{$border-width});
-  font-size: 1rem;
-  line-height: 1.5rem;
-  text-transform: uppercase;
+  font-size: 1rem !important;
+  line-height: 1.5rem !important;
+  text-transform: uppercase !important;
   border-radius: 0 !important;
   font-family: $family-secondary !important;
   font-weight: $weight-semibold !important;
-  height: auto;
+  height: auto !important;
+  text-decoration: none !important;
 
   span.icon {
     height: auto;
@@ -26,7 +33,7 @@
     }
   }
 
-  span.icon:last-child:not(:first-child){
+  span.icon:last-child:not(:first-child) {
     margin: 0;
     padding: 0;
   }
@@ -53,7 +60,7 @@
     }
 
     span.icon:first-child:not(:last-child) {
-      margin-right: .5rem;
+      margin-right: 0.5rem;
     }
 
     span:first-child:not([class="icon"]) {
@@ -61,10 +68,9 @@
       margin-right: 0 !important;
       padding-left: 1rem !important;
       + span {
-        margin-left: .5rem !important;
+        margin-left: 0.5rem !important;
       }
     }
-
   }
 
   &.is-large {
@@ -94,7 +100,6 @@
         margin-right: -1rem !important;
       }
     }
-
   }
   &:focus {
     &:not(:active) {
@@ -102,7 +107,10 @@
     }
   }
 
-  &.is-primary, &.is-secondary, &.is-danger, &.is-cta {
+  &.is-primary,
+  &.is-secondary,
+  &.is-danger,
+  &.is-cta {
     &:hover {
       background-color: $grey-dark;
       border-color: $grey-dark;
@@ -168,7 +176,8 @@
     }
   }
 
-  &.is-cta, input[type='submit'] {
+  &.is-cta,
+  input[type="submit"] {
     color: $ben-franklin-blue-dark;
     border-color: $ben-franklin-blue-dark;
     background-color: transparent;
@@ -217,15 +226,14 @@
         margin-right: -1rem !important;
       }
     }
-
   }
 }
 
-.buttons {  
+.buttons {
   .button:not(:last-child):not(.is-fullwidth) {
-    margin-right: 4rem;    
+    margin-right: 4rem;
   }
-  .button {    
+  .button {
     margin-bottom: 2rem;
   }
 }
